--- a/site/boot.html
+++ b/site/boot.html
@@ -1,21 +1,89 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <title>TuS Merkenich 2009</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body class="d-flex flex-column h-100">
+
 <div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p>
+  <img src="../img/front.JPG" width="400" alt="front image">
+  <h1>TuS Merkenich 2009</h1>
+  <p style="color:blue;">Resize this responsive page to see the effect!</p> 
 </div>
 
+<header>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class"navbar-brand" href"#">Navigation</a>
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggle-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse show" id="navbarCollapse" style>
+      <ul class="navbar-nav mr-auto">
+        <li>
+          <a class="nav-link" href="#">
+            "Home"
+            <span class="sr-only">(current)</span>
+          <a/>
+        </li>
+        <li>
+          <a class="nav-link" href="#">
+            "Segeln"
+            <span class="sr-only">(current)</span>
+          <a/>
+        </li>
+        <li>
+          <a class="nav-link" href="#">
+            "Wandern"
+            <span class="sr-only">(current)</span>
+          <a/>
+        </li>
+        <li>
+          <a class="nav-link" href="#">
+            "Gynmastik"
+            <span class="sr-only">(current)</span>
+          <a/>
+        </li>
+      </ul>
+      <form class="form-inline mt-2 mt-md-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+</header>
+  
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
       <h3>Column 1</h3>
-      <p>Lorem ipsum dolor..</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <h3>Column 2</h3>
-      <p>Lorem ipsum dolor..</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor..</p>
+      <h3>Column 3</h3>        
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
   </div>
 </div>
+
+
+<div class="container-fluid">
+  <h1 style="text-align:center"> Bottom part</h1>
+  <p style="text-align:center"> Impressum might be inserted here</p>
+</div>
+
+</body>
+</html>
+
