--- a/site/start.html
+++ b/site/start.html
@@ -14,23 +14,24 @@
       <a href="home.html"class="w3-button w3-bar-item">Home</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
-      <a href="gymnastik.html"class="w3-button w3-bar-item">Gynmnastik</a>
+      <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     <section>
       <h2 class="w3-wide w3-center"> Leitbild</h2>
       <p class="w3-opacity"><i> 
-        "Der TuS Koeln Merkenich, wir bieten Breitensport in familierer Atmosphäre für
-        jung und jung gebliebenen, ältere Mitbürger.
-        Wir verbinden so unterschiedlich Sportarten wie Gymnastik, Wandern und Segeln 
-        und verbinden so auch unsere Mitglieder miteinander.
-        Koorperationsverträge mit der Stadt Koeln spiegeln die Verbundenheit mit unserem
-        Stadttei wieder. Unsere soziale Verantwortung beweisen wir mit niedrigen 
-        Beiträgen bei gleichzeitig gesunden Bilanzen"
+        Willkommen auf der Website des TuS Köln Merkenich! <br>
+		Wir bieten Breitensport in familiärer Atmosphäre für
+        junge und jung gebliebene ältere Mitbürger.
+        Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
+        und bringen so auch unsere Mitglieder zusammen.
+        Koorperationsverträge mit der Stadt Köln spiegeln die Verbundenheit mit unserem
+        Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
+        Beiträgen bei gleichzeitig gesunden Bilanzen.
         </i></p>
     </section>
     <p id="date"></p>
     <script src="app.js"></script>
-    <noscript>You neet to enable JavaScript to view the full site.</noscript>
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
 </html>
