--- a/site/boot.html
+++ b/site/boot.html
@@ -45,7 +45,7 @@
         </li>
         <li>
           <a class="nav-link" href="#">
-            "Gynmastik"
+            "Gymnastik"
             <span class="sr-only">(current)</span>
           <a/>
         </li>
