--- a/site/kontakt.html
+++ b/site/kontakt.html
@@ -12,10 +12,10 @@
     </a>
     <nav class=navBar>
       <a href="home.html"class="w3-button w3-bar-item">Home</a>
-      <a href="#Wandern"class="w3-button w3-bar-item">Wandern</a>
-      <a href="#Segeln"class="w3-button w3-bar-item">Segeln</a>
-      <a href="#Gymnasitk"class="w3-button w3-bar-item">Gynmnastik</a>
-      <a href="#Kontakt"class="w3-button w3-bar-item">Kontakt</a>
+      <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
+      <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
+      <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
+      <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     Allgemeine Information zu dem Verein.
   </body>
