Filled section Segeln with life.

--- a/site/segeln.html
+++ b/site/segeln.html
@@ -17,6 +17,67 @@
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
-    Allgemeine Information zu dem Verein.
+    <section>
+      <h2 class="w3-wide w3-center"> Segeln</h2>
+      <p class="w3-opacity"><i> 
+		Der Bereich Segeln ist die kleinste Sparte im Verein. <br>
+		Seine 13 Mitglieder sind Nutzer und Instandhalter von 2 Segelbooten mit Standorten in Monnickendam und Naarden, Niederlande.
+		Die Spartenmitglieder werden angehalten, im Rahmen ihrer Möglichkeiten bei der Instandhaltung und Wartung der Boote aktiv mitzuwirken,
+		da die finanziellen Mittel der Segelsparte begrenzt sind. <br>
+	  <p class="w3-opacity"><i>
+		Gesegelt wird mit zwei Booten: <br>
+		
+		<table>
+		<tr>
+			<th width=200> </th>
+			<th> <img src="../img/Delfin.jpg" height = "250"> </th>
+			<th width = 25> </th>
+			<th> <img src="../img/Ilmatar.jpg" height = "250"> </th>
+		</tr>
+		<tr>
+			<td>Typ</td>
+			<td>Bandholm 27</td>
+			<td> </td>
+			<td>Phantom 32</td>
+		</tr>
+		<tr>
+			<td>Bootsname</td>
+			<td>"DELFIN"</td>
+			<td> </td>
+			<td>"ILMATAR"</td>
+		</tr>
+		<tr>
+			<td> Segelbootstyp </td>
+			<td> Kielyacht </td>
+			<td> </td>
+			<td> Kielyacht </td>
+		</tr>
+		<tr>
+			<td> Länge </td>
+			<td> 8,30 m </td>
+			<td> </td>
+			<td> 9,90 m </td>
+		</tr>
+		<tr>
+			<td> Segelfläche </td>
+			<td> 38 qm </td>
+			<td> </td>
+			<td> 56 qm </td>
+		</tr>
+		<tr>
+			<td> Anzahl Kojen </td>
+			<td> 4 </td>
+			<td> </td>
+			<td> max. 5 </td>
+		</tr>
+		<tr>
+			<td> Motor </td>
+			<td> Einbaudiesel 13 PS </td>
+			<td> </td>
+			<td> Einbaudiesel 20 PS </td>
+		</tr>
+		</table>
+        </i></p>
+    </section>	
   </body>
 </html>
