Adds a new style sheet as an example to further improve the design

--- a/site/segeln.html
+++ b/site/segeln.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>TuS Merkenich 2009 Home</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <a href="start.html">
@@ -30,9 +30,9 @@
 		<table>
 		<tr>
 			<th width=200> </th>
-			<th> <img src="../img/Delfin.jpg" height = "250"> </th>
+			<th> <img src="../img/delfin.jpg" height = "250"> </th>
 			<th width = 25> </th>
-			<th> <img src="../img/Ilmatar.jpg" height = "250"> </th>
+			<th> <img src="../img/delfin2.jpg" height = "250"> </th>
 		</tr>
 		<tr>
 			<td>Typ</td>
