Added copyright footer.

--- a/site/segeln.html
+++ b/site/segeln.html
@@ -32,7 +32,7 @@
 			<th width=200> </th>
 			<th> <img src="../img/delfin.jpg" height = "250"> </th>
 			<th width = 25> </th>
-			<th> <img src="../img/delfin2.jpg" height = "250"> </th>
+			<th> <img src="../img/ilmatar.jpg" height = "250"> </th>
 		</tr>
 		<tr>
 			<td>Typ</td>
@@ -80,4 +80,5 @@
         </i></p>
     </section>	
   </body>
+  <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
