--- a/site/start.html
+++ b/site/start.html
@@ -29,8 +29,9 @@
         Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
         Beiträgen bei gleichzeitig gesunden Bilanzen.
         </i></p>
-    </section>
-    <p id="date"></p>
+   </section>
+  <!--  <footer id="date"></footer>-->
+	<footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
