Italic to normal face.

--- a/site/segeln.html
+++ b/site/segeln.html
@@ -18,13 +18,13 @@
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     <section>
-      <h2 class="w3-wide w3-center"> Segeln</h2>
-      <p class="w3-opacity"><i> 
+      <h1 class="w3-wide w3-center"> Segeln</h1>
+      <p class="w3-opacity">
 		Der Bereich Segeln ist die kleinste Sparte im Verein. <br>
 		Seine 13 Mitglieder sind Nutzer und Instandhalter von 2 Segelbooten mit Standorten in Monnickendam und Naarden, Niederlande.
 		Die Spartenmitglieder werden angehalten, im Rahmen ihrer Möglichkeiten bei der Instandhaltung und Wartung der Boote aktiv mitzuwirken,
 		da die finanziellen Mittel der Segelsparte begrenzt sind. <br>
-	  <p class="w3-opacity"><i>
+	  <p class="w3-opacity">
 		Gesegelt wird mit zwei Booten: <br>
 		
 		<table>
