--- a/site/start.html
+++ b/site/start.html
@@ -18,10 +18,11 @@
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
     <section>
-      <h2 class="w3-wide w3-center"> Leitbild</h2>
-      <p class="w3-opacity"><i> 
-        Willkommen auf der Website des TuS Köln Merkenich! <br>
-		Wir bieten Breitensport in familiärer Atmosphäre für
+      <h1 class="w3-wide w3-center"> Leitbild</h1>
+      <p class="w3-opacity">
+        Willkommen auf der Website des TuS Köln Merkenich!</p>
+	  <p>
+	    Wir bieten Breitensport in familiärer Atmosphäre für
         junge und jung gebliebene ältere Mitbürger.
         Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
         und bringen so auch unsere Mitglieder zusammen.
