Added slideshow on start page.

--- a/site/start.html
+++ b/site/start.html
@@ -31,6 +31,12 @@
         Beiträgen bei gleichzeitig gesunden Bilanzen.
         </i></p>
    </section>
+   	<figure id="gallery">
+		<figure> <img src="../img/DSC_0396.jpg" width = "1000"> </figure>
+		<figure> <img src="../img/UNADJUSTEDNONRAW_thumb_12c.jpg" width = "1000"> </figure>
+		<figure> <img src="../img/UNADJUSTEDNONRAW_thumb_126.jpg" width = "1000"> </figure>
+	</figure>
+   
   <!--  <footer id="date"></footer>-->
 	<footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
     <script src="app.js"></script>
