Added second navigation bar (not very pretty yet...).

--- a/site/wandern.html
+++ b/site/wandern.html
@@ -17,6 +17,12 @@
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
+	<p></p>
+	<nav class=navBar2>
+      <a href="#"class="w3-button w3-bar-item">Album</a>
+      <a href="#"class="w3-button w3-bar-item">Termine</a>
+      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
+    </nav>
     Allgemeine Information zu dem Verein.
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
