--- a/site/home.html
+++ b/site/home.html
@@ -17,6 +17,14 @@
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
+	<p></p>
+	<nav class=navBar2>
+      <a href="#"class="w3-button w3-bar-item">Vorstand</a>
+      <a href="#"class="w3-button w3-bar-item">Chronik</a>
+      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
+      <a href="#"class="w3-button w3-bar-item">Kooperationen</a>
+      <a href="#"class="w3-button w3-bar-item">Satzung</a>
+    </nav>
     Allgemeine Information zu dem Verein.
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
