--- a/site/segeln.html
+++ b/site/segeln.html
@@ -17,6 +17,29 @@
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
+	<p></p>
+	<nav class=navBar2>
+	  <div class="dropdown">
+		<button class="dropbtn">Delfin
+			<i class="fa fa-caret-down"></i>
+		</button>
+		<div class="dropdown-content">
+			<a href="#">Album</a>
+			<a href="#">Termine</a>
+			<a href="#">Kontakt</a>
+		</div>
+	  </div>
+	  <div class="dropdown">
+		<button class="dropbtn">Ilmatar
+			<i class="fa fa-caret-down"></i>
+		</button>
+		<div class="dropdown-content">
+			<a href="#">Album</a>
+			<a href="#">Termine</a>
+			<a href="#">Kontakt</a>
+		</div>
+	  </div>
+    </nav>
     <section>
       <h1 class="w3-wide w3-center"> Segeln</h1>
       <p class="w3-opacity">
