Changed style of dropdown menu. Added content to Gymnastik -> Angebot.

--- a/site/gymnastik_kursangebot.html
+++ b/site/gymnastik_kursangebot.html
@@ -20,10 +20,29 @@
 	<p></p>
 	<nav class=navBar2>
       <a href="#"class="w3-button w3-bar-item">Album</a>
-      <a href="gymnastik_kursangebot.html"class="w3-button w3-bar-item">Angebot</a>
+      <a href="#"class="w3-button w3-bar-item">Angebot</a>
       <a href="#"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
-    Allgemeine Information zu dem Verein.
+	<section>
+		<h1 class="w3-wide w3-center"> Kursangebot Gymnastik </h1>
+		<p class="w3-opacity">
+		Die Kurse finden in der Sporthalle der GS Spörkelhof statt. <br>
+		Ansprechpartner: Frau Lenarz - 0221 705774 </p>
+		<h2> Kinderzirkus </h2>
+		<p class="w3-opacity">
+		Mo 16:00 bis 18:00 </p>
+		<h2> Mutter und Kind Turnen </h2>
+		<p class="w3-opacity">
+		Di 16:15 bis 17:15 <br>
+		Di 17:15 bis 18:15 </p>
+		<h2> Jugendturnen </h2>
+		<p class="w3-opacity">
+		Mi 16:00 bis 17:15 <br>
+		Mi 17:15 bis 18:30 </p>
+		<h2> Damengymnastik </h2>
+		<p class="w3-opacity">
+		Mi 18:30 bis 19:30 <br>
+		Mi 19:30 bis 20:30 </p>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
