--- a/site/segeln.html
+++ b/site/segeln.html
@@ -12,9 +12,9 @@
     </a>
     <nav class=navBar>
       <a href="home.html"class="w3-button w3-bar-item">Home</a>
+	  <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
+	  <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
-      <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
-      <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
 	<p></p>
@@ -52,10 +52,10 @@
 		
 		<table>
 		<tr>
-			<th width=200> </th>
-			<th> <img src="../img/delfin.jpg" height = "250"> </th>
+			<th width=200> </th>    
+			<th> <a href="#"> <img src="../img/delfin.jpg" height = "250"> </a> </th>
 			<th width = 25> </th>
-			<th> <img src="../img/ilmatar.jpg" height = "250"> </th>
+			<th> <a href="#"> <img src="../img/ilmatar.jpg" height = "250"> </a> </th>
 		</tr>
 		<tr>
 			<td>Typ</td>
