First version almost finished

--- a/site/gymnastik.html
+++ b/site/gymnastik.html
@@ -12,18 +12,38 @@
     </a>
     <nav class=navBar>
       <a href="home.html"class="w3-button w3-bar-item">Home</a>
-	  <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
-	  <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
+      <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
+      <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
+      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-	<p></p>
 	<nav class=navBar2>
       <a href="#"class="w3-button w3-bar-item">Album</a>
       <a href="gymnastik_kursangebot.html"class="w3-button w3-bar-item">Angebot</a>
       <a href="#"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
-    Allgemeine Information zu dem Verein.
+	<p>
+    Die größte Sparte des TuS Köln-Merkenich ist die Gymnastik-Sparte mit der
+    Spartenleiterin Anita Lenartz. Die verschiedenen Angeboten finden sind im Folgenden
+    beschrieben.
+    <br>
+    <b> Mutter und Kind Turnen </b>
+    bietet schon den kleinstet der Kleinen Bewegungmöglichkeiten mit erfahrenen Übungsleitern
+    an, ohne auf die vertrautet Bezugsperson Vater oder Mutter zu verzichten.
+    Die Übungen sollen die motorischen Fähigkeiten fördern und fordern ohne zu überfordern.
+    <br>
+    <b> Kinderturnen </b>
+    ermöglicht den Kindern im Vorschul- und Grundschulalter auch alleine in gemischen Gruppen
+    zum Turnen zu kommen. Das Angebot geht von Turnen in aufgebauten Parcouren bis Ballspielen. 
+    Die so oft beklagten motorischen Defizite kommen so erst nicht zu Stande.
+    <br>
+    <b> Erwachsenengymnastik</b>
+    Hier sind in erster Linie Angebote für Frauen zu nennen, die in der ersten Gruppe jüngere
+    Frauen anspricht, mit Angeboten von klassischer Gynmnastik und Fitnesstraining. In der 
+    zweiten Gruppe sind die Frauen im fortgeschrittenen, aktiven Gymnastikalter die bei
+    schonender Gymnastik auch die Sozialkontakt pflegen.
+  </p>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
