--- a/site/rechtliches.html
+++ b/site/rechtliches.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>TuS Merkenich 2009 Kontakt</title>
+    <title>TuS Merkenich 2009 Home</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -18,7 +18,12 @@
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-    Allgemeine Information zu dem Verein.
+	<p></p>
+    Impressum
+    TuS Köln Merkenich 2009
+    <i>...</i><br>
+    <i>Adresse</i><br>
+    <i>Vereinsregister</i><br>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
