--- a/site/start.html
+++ b/site/start.html
@@ -12,10 +12,11 @@
     </a>
     <nav class="navBar">
       <a href="home.html"class="w3-button w3-bar-item">Home</a>
-	  <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
-	  <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
+      <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
+      <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
+      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
     <section>
       <h1 class="w3-wide w3-center"> Leitbild</h1>
@@ -31,16 +32,21 @@
         Beiträgen bei gleichzeitig gesunden Bilanzen.
         </i></p>
    </section>
+  
+<!--
+	<img src="../img/segeln_arbeit_busgruppe.jpg" id="responsize-image">
+-->
    
-   	<figure id="gallery">
-		<figure> <img src="../img/DSC_0396.jpg" width = "1000"> </figure>
-		<figure> <img src="../img/UNADJUSTEDNONRAW_thumb_12c.jpg" width = "1000"> </figure>
-		<figure> <img src="../img/UNADJUSTEDNONRAW_thumb_126.jpg" width = "1000"> </figure>
+  <figure id="gallery">
+		<figure> <img src="../img/segeln_arbeit_busgruppe.jpg" id="responsize-image"> </figure>
+		<figure> <img src="../img/uebersicht_hafen.jpg" id="responsize-image"> </figure>
+		<figure> <img src="../img/segeln_delfin_action.jpg" id="responsize-image"> </figure>
 	</figure>
    
-  <!--  <footer id="date"></footer>-->
+<!--
 	<footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
+-->
 </html>
