Adds first modifications to website, first impressum

--- a/site/gymnastik.html
+++ b/site/gymnastik.html
@@ -21,29 +21,30 @@
 	<nav class=navBar2>
       <a href="#"class="w3-button w3-bar-item">Album</a>
       <a href="gymnastik_kursangebot.html"class="w3-button w3-bar-item">Angebot</a>
-      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
-    </nav>
-	<p>
-    Die größte Sparte des TuS Köln-Merkenich ist die Gymnastik-Sparte mit der
-    Spartenleiterin Anita Lenartz. Die verschiedenen Angeboten finden sind im Folgenden
-    beschrieben.
-    <br>
-    <b> Mutter und Kind Turnen </b>
-    bietet schon den kleinstet der Kleinen Bewegungmöglichkeiten mit erfahrenen Übungsleitern
-    an, ohne auf die vertrautet Bezugsperson Vater oder Mutter zu verzichten.
-    Die Übungen sollen die motorischen Fähigkeiten fördern und fordern ohne zu überfordern.
-    <br>
-    <b> Kinderturnen </b>
-    ermöglicht den Kindern im Vorschul- und Grundschulalter auch alleine in gemischen Gruppen
-    zum Turnen zu kommen. Das Angebot geht von Turnen in aufgebauten Parcouren bis Ballspielen. 
-    Die so oft beklagten motorischen Defizite kommen so erst nicht zu Stande.
-    <br>
-    <b> Erwachsenengymnastik</b>
-    Hier sind in erster Linie Angebote für Frauen zu nennen, die in der ersten Gruppe jüngere
-    Frauen anspricht, mit Angeboten von klassischer Gynmnastik und Fitnesstraining. In der 
-    zweiten Gruppe sind die Frauen im fortgeschrittenen, aktiven Gymnastikalter die bei
-    schonender Gymnastik auch die Sozialkontakt pflegen.
-  </p>
+  </nav>
+  <section>
+    <p>
+      Die größte Sparte des TuS Köln-Merkenich ist die Gymnastik-Sparte mit der
+      Spartenleiterin Anita Lenarz. Die verschiedenen Angeboten finden sind im Folgenden
+      beschrieben.
+      <h1 class="w3-wide w3-center"> Mutter und Kind Turnen</h1>
+      Mutter und Kind Turnen bietet schon den kleinstet der
+      Kleinen Bewegungmöglichkeiten mit erfahrenen Übungsleitern
+      an, ohne auf die vertrautet Bezugsperson Vater oder Mutter zu verzichten.
+      Die Übungen sollen die motorischen Fähigkeiten fördern und fordern ohne zu überfordern.
+      <h1 class="w3-wide w3-center"> Kinderturnen </h1>
+      Kinderturnen ermöglicht den Kindern im Vorschul- und Grundschulalter
+      auch alleine in gemischen Gruppen
+      zum Turnen zu kommen.
+      Das Angebot geht von Turnen in aufgebauten Parcouren bis Ballspielen. 
+      Die so oft beklagten motorischen Defizite kommen so erst nicht zu Stande.
+      <h1 class="w3-wide w3-center"> Erwachsenengymnastik</h1>
+      Hier sind in erster Linie Angebote für Frauen zu nennen, die in der ersten Gruppe jüngere
+      Frauen anspricht, mit Angeboten von klassischer Gynmnastik und Fitnesstraining. In der 
+      zweiten Gruppe sind die Frauen im fortgeschrittenen, aktiven Gymnastikalter die bei
+      schonender Gymnastik auch die Sozialkontakt pflegen.
+    </p>
+  </section>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
