--- a/site/gymnastik_kursangebot.html
+++ b/site/gymnastik_kursangebot.html
@@ -21,7 +21,6 @@
 	<nav class=navBar2>
       <a href="#"class="w3-button w3-bar-item">Album</a>
       <a href="#"class="w3-button w3-bar-item">Angebot</a>
-      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
 	<section>
 		<h1 class="w3-wide w3-center"> Kursangebot Gymnastik </h1>
@@ -43,6 +42,9 @@
 		<p class="w3-opacity">
 		Mi 18:30 bis 19:30 <br>
 		Mi 19:30 bis 20:30 </p>
+		<h2> Yoga </h2>
+		<p class="w3-opacity">
+		Do 18:30 bis 20:00 </p>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
