--- a/site/impressum.html
+++ b/site/impressum.html
@@ -24,12 +24,19 @@
         <a href="geschaeftsordnung.html" class="w3-button
           w3-bar-item">Geschäftsordnung</a>
     </nav>
-	<p></p>
-    Impressum
-    TuS Köln Merkenich 2009
-    <i>...</i><br>
-    <i>Adresse</i><br>
-    <i>Vereinsregister</i><br>
+	<section>
+    <h1 class="w3-wide w3-center"> Vereinsname und Rechtsform</h1>
+    TuS Koeln-Merkenich 2009 e.V.
+    <h1 class="w3-wide w3-center"> Adresse</h1>
+    50769 Koeln, Jungbluthstraße 19
+    <h1 class="w3-wide w3-center"> Vorstandsvorsitzender</h1>
+    Hansjoerg Schneider <br>
+    eMail :
+    <h1 class="w3-wide w3-center"> Registergericht</h1>
+    Amtsgericht Koeln
+    <h1 class="w3-wide w3-center"> Registernummer</h1>
+    VR 16234
+  </section>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
