--- a/site/segeln.html
+++ b/site/segeln.html
@@ -26,7 +26,6 @@
 		</button>
 		<div class="dropdown-content">
 			<a href="#">Album</a>
-			<a href="#">Termine</a>
 			<a href="#">Kontakt</a>
 		</div>
 	  </div>
@@ -36,7 +35,6 @@
 		</button>
 		<div class="dropdown-content">
 			<a href="#">Album</a>
-			<a href="#">Termine</a>
 			<a href="#">Kontakt</a>
 		</div>
 	  </div>
@@ -44,64 +42,72 @@
     <section>
       <h1 class="w3-wide w3-center"> Segeln</h1>
       <p class="w3-opacity">
-		Der Bereich Segeln ist die kleinste Sparte im Verein. <br>
-		Seine 13 Mitglieder sind Nutzer und Instandhalter von 2 Segelbooten mit Standorten in Monnickendam und Naarden, Niederlande.
-		Die Spartenmitglieder werden angehalten, im Rahmen ihrer Möglichkeiten bei der Instandhaltung und Wartung der Boote aktiv mitzuwirken,
-		da die finanziellen Mittel der Segelsparte begrenzt sind. <br>
-	  <p class="w3-opacity">
-		Gesegelt wird mit zwei Booten: <br>
+        Der Bereich Segeln ist die kleinste Sparte im Verein. <br>
+        Seine 13 Mitglieder sind Nutzer und Instandhalter von 2
+        Segelbooten mit Standorten in Monnickendam und Naarden, Niederlande.
+        Die Spartenmitglieder werden angehalten, im Rahmen ihrer Möglichkeiten
+        bei der Instandhaltung und Wartung der Boote aktiv mitzuwirken,
+        da die finanziellen Mittel der Segelsparte begrenzt sind. <br>
+      <p class="w3-opacity">
+		  Gesegelt wird mit zwei Booten: <br>
 		
-		<table>
-		<tr>
-			<th width=200> </th>    
-			<th> <a href="#"> <img src="../img/delfin.jpg" height = "250"> </a> </th>
-			<th width = 25> </th>
-			<th> <a href="#"> <img src="../img/ilmatar.jpg" height = "250"> </a> </th>
-		</tr>
-		<tr>
-			<td>Typ</td>
-			<td>Bandholm 27</td>
-			<td> </td>
-			<td>Phantom 32</td>
-		</tr>
-		<tr>
-			<td>Bootsname</td>
-			<td>"DELFIN"</td>
-			<td> </td>
-			<td>"ILMATAR"</td>
-		</tr>
-		<tr>
-			<td> Segelbootstyp </td>
-			<td> Kielyacht </td>
-			<td> </td>
-			<td> Kielyacht </td>
-		</tr>
-		<tr>
-			<td> Länge </td>
-			<td> 8,30 m </td>
-			<td> </td>
-			<td> 9,90 m </td>
-		</tr>
-		<tr>
-			<td> Segelfläche </td>
-			<td> 38 qm </td>
-			<td> </td>
-			<td> 56 qm </td>
-		</tr>
-		<tr>
-			<td> Anzahl Kojen </td>
-			<td> 4 </td>
-			<td> </td>
-			<td> max. 5 </td>
-		</tr>
-		<tr>
-			<td> Motor </td>
-			<td> Einbaudiesel 13 PS </td>
-			<td> </td>
-			<td> Einbaudiesel 20 PS </td>
-		</tr>
-		</table>
-        </i></p>
+      <table>
+      <tr>
+        <th width=200> </th>    
+        <th> <a href="#"> <img src="../img/delfin.jpg" height = "250"> </a> </th>
+        <th width = 25> </th>
+        <th> <a href="#"> <img src="../img/ilmatar.jpg" height = "250"> </a> </th>
+      </tr>
+      <tr>
+        <td>Typ</td>
+        <td>Bandholm 27</td>
+        <td> </td>
+        <td>Phantom 32</td>
+      </tr>
+      <tr>
+        <td>Bootsname</td>
+        <td>"DELFIN"</td>
+        <td> </td>
+        <td>"ILMATAR"</td>
+      </tr>
+      <tr>
+        <td> Segelbootstyp </td>
+        <td> Kielyacht </td>
+        <td> </td>
+        <td> Kielyacht </td>
+      </tr>
+      <tr>
+        <td> Länge </td>
+        <td> 8,30 m </td>
+        <td> </td>
+        <td> 9,90 m </td>
+      </tr>
+      <tr>
+        <td> Segelfläche </td>
+        <td> 38 qm </td>
+        <td> </td>
+        <td> 56 qm </td>
+      </tr>
+      <tr>
+        <td> Anzahl Kojen </td>
+        <td> 4 </td>
+        <td> </td>
+        <td> max. 5 </td>
+      </tr>
+      <tr>
+        <td> Motor </td>
+        <td> Einbaudiesel 13 PS </td>
+        <td> </td>
+        <td> Einbaudiesel 20 PS </td>
+      </tr>
+      <tr>
+        <td> Kontakt </td>
+        <td> NN </td>
+        <td> </td>
+        <td> NN </td>
+      </tr>
+      </table>
+          </i></p>
     </section>	
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
