--- a/site/home.html
+++ b/site/home.html
@@ -18,38 +18,50 @@
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-	<p>
-    Unser Verein wurde im Spätjahr 2009 gegründet um den Sparten Gymnastik, Segeln und Wandern, 
-    die sich aus der Organisation des SV-Köln-Merkenich 1921 e.V. lösen wollten eine neue 
-    sportliche Heimat zu bieten. Aus organisatorischen Gründen konnten wir jedoch erst am 1. 
-    Januar 2011 mit dem Sportbetrieb beginnen.
-  </p>
-  <p>
-    Der TuS Köln Merkenich deckt mit den Abteilungen Gynmastik und Wandern große Gebiete des 
-    Breitensportes ab. Mit der Segelabteilung sind wir aber auch in einem hochspezialisierten 
-    Sportbereich vertreten.
-  </p>
-  <p>
-    Unsere Gynmanstiksparte widmet sich hauptsächlich dem Frauen- und Jugendturnen, während 
-    Wandern allen Altersgruppen die Möglichkeit bietet in Gemeinschaft die Natur zu Fuß und 
-    damit hautnah zu erleben. Segeln wiederum eröffnet dem interessierten Wassersportler große
-    Möglichkeiten Teamgeist zu erleben.
-  </p>
-  <p>
-    Darüber hinaus kommt aber auch die Geselligkeit nicht zu kurz. So treffen sich die
-    Mitglieder der Sparte Wandern jährlich im Sommer zu einem Grillnachmittag und im Dezember
-    im Rahmen der Spartenversammling zu einer Advents- bzw. Weihnachtsfeier.
-  </p>
-  <p>
-    Um das Budget zu entlasten wird bei den Seglern auch das gemeinsame Arbeiten an den 
-    Booten im Frühjahr und das winterfest machen im Herbst als Arbeitsbeitrag verlangt. Bei
-    diesen Arbeitenseinsätzen wird jeder nach seinen Fähigkeiten eingeteilt. Anstrich des 
-    Unterwasserschiffes mit Antifouling oder Polieren der Bordwände oder Reinigen des
-    Innenbereiches oder Ölwechsel am Dieselmoter... es gibt immer viel zu tun. Aber geselliges
-    Segeln mit Freunden oder anderen Seglern sind der Lohn für diese alljährlichen Einsätze.
-    Zum Jahresabschluss wird ein gemeinsamer Abend mit Essen, Trinken und natürlich
-    Erfahrungsaustausch, wie unter Seglern üblich, organisiert.
-  </p>
+  <section>
+    <h1 class="w3-wide w3-center"> Vorstellung Verein</h1>
+    <p>
+      Unser Verein wurde im Spätjahr 2009 gegründet um den Sparten Gymnastik,
+      Segeln und Wandern, 
+      die sich aus der Organisation des SV-Köln-Merkenich 1921 e.V. lösen wollten eine neue 
+      sportliche Heimat zu bieten. Aus organisatorischen Gründen konnten wir jedoch erst am 1. 
+      Januar 2010 mit dem Sportbetrieb beginnen. Heute verfügt der TuS Köln-Merkenich über circa
+      150 aktive Mitglieder. Wir fühlen uns besonders der
+      Förderung der Jugend verpflichtet, auch
+      die Integration anderer Nationalitäten liegt uns am Herzen. Selbstverständlich versuchen
+      wir auch junge und junggebliebene Menschen mit Angeboten in unserem Verein zusammen
+      zubringen.
+    </p>
+    <h1 class="w3-wide w3-center"> Sparten</h1>
+    <p>
+      Der TuS Köln Merkenich deckt mit den Abteilungen Gynmastik und Wandern große Gebiete des 
+      Breitensportes ab. Mit der Segelabteilung sind wir aber auch in einem hochspezialisierten 
+      Sportbereich vertreten.
+    </p>
+    <p>
+      Unsere Gynmanstiksparte widmet sich hauptsächlich dem Frauen- und Jugendturnen, während 
+      Wandern allen Altersgruppen die Möglichkeit bietet in Gemeinschaft die Natur zu Fuß und 
+      damit hautnah zu erleben. Segeln wiederum eröffnet dem interessierten Wassersportler große
+      Möglichkeiten Teamgeist zu erleben.
+    </p>
+    <p>
+      Darüber hinaus kommt aber auch die Geselligkeit nicht zu kurz. So treffen sich die
+      Mitglieder der Sparte Wandern jährlich im Sommer zu einem Grillnachmittag und im Dezember
+      im Rahmen der Spartenversammling zu einer Advents- bzw. Weihnachtsfeier.
+    </p>
+    <p>
+      Um das Budget zu entlasten wird bei den Seglern auch das gemeinsame Arbeiten an den 
+      Booten im Frühjahr und das winterfest machen im Herbst als Arbeitsbeitrag verlangt. Bei
+      diesen Arbeitenseinsätzen wird jeder nach seinen Fähigkeiten eingeteilt. Anstrich des 
+      Unterwasserschiffes mit Antifouling oder Polieren der Bordwände oder Reinigen des
+      Innenbereiches oder Ölwechsel am Dieselmoter... es gibt immer viel zu tun. Aber geselliges
+      Segeln mit Freunden oder anderen Seglern sind der Lohn für diese alljährlichen Einsätze.
+      Zum Jahresabschluss wird ein gemeinsamer Abend mit Essen, Trinken und natürlich
+      Erfahrungsaustausch, wie unter Seglern üblich, organisiert.
+    </p>
+    <h1 class="w3-wide w3-center"> Vorstand</h1>
+    <p> Kurze Vorstellung der Vorstandsmitglieder </p>
+<!--
 	<nav class=navBar2>
       <a href="#"class="w3-button w3-bar-item">Vorstand</a>
       <a href="#"class="w3-button w3-bar-item">Chronik</a>
@@ -57,6 +69,7 @@
       <a href="#"class="w3-button w3-bar-item">Kooperationen</a>
       <a href="#"class="w3-button w3-bar-item">Satzung</a>
   </nav>
+-->
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
