--- a/site/start.html
+++ b/site/start.html
@@ -21,32 +21,32 @@
     <section>
       <h1 class="w3-wide w3-center"> Leitbild</h1>
       <p class="w3-opacity">
-        Willkommen auf der Website des TuS Köln Merkenich!</p>
-	  <p>
+        Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!</p>
+	    <p>
 	    Wir bieten Breitensport in familiärer Atmosphäre für
-        junge und jung gebliebene ältere Mitbürger.
-        Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
-        und bringen so auch unsere Mitglieder zusammen.
-        Koorperationsverträge mit der Stadt Köln spiegeln die Verbundenheit mit unserem
-        Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
-        Beiträgen bei gleichzeitig gesunden Bilanzen.
-        </i></p>
-   </section>
+      junge und jung gebliebene ältere Mitbürger.
+      Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
+      und bringen so auch unsere Mitglieder zusammen.
+      Koorperationsverträge mit der Stadt Köln spiegeln die Verbundenheit mit unserem
+      Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
+      Beiträgen bei gleichzeitig gesunden Bilanzen.
+      </i>
+      </p>
+      <figure id="gallery">
+        <figure> <img src="../img/segeln_arbeit_busgruppe.jpg" id="responsize-image"> </figure>
+        <figure> <img src="../img/uebersicht_hafen.jpg" id="responsize-image"> </figure>
+        <figure> <img src="../img/segeln_delfin_action.jpg" id="responsize-image"> </figure>
+      </figure>
+    </section>
+
+    <section>
+      <h1 class="w3-wide w3-center"> Aktuelles</h1>
+      <p class="w3-opacity"> Zurzeit keine neuen Nachrichten </p>
+    </section>
   
-<!--
-	<img src="../img/segeln_arbeit_busgruppe.jpg" id="responsize-image">
--->
    
-  <figure id="gallery">
-		<figure> <img src="../img/segeln_arbeit_busgruppe.jpg" id="responsize-image"> </figure>
-		<figure> <img src="../img/uebersicht_hafen.jpg" id="responsize-image"> </figure>
-		<figure> <img src="../img/segeln_delfin_action.jpg" id="responsize-image"> </figure>
-	</figure>
-   
-<!--
 	<footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
--->
 </html>
