adds several pictures from mails

--- a/site/impressum.html
+++ b/site/impressum.html
@@ -26,14 +26,14 @@
     </nav>
 	<section>
     <h1 class="w3-wide w3-center"> Vereinsname und Rechtsform</h1>
-    TuS Koeln-Merkenich 2009 e.V.
+    TuS Köln-Merkenich 2009 e.V.
     <h1 class="w3-wide w3-center"> Adresse</h1>
-    50769 Koeln, Jungbluthstraße 19
+    50769 Köln, Jungbluthstraße 19
     <h1 class="w3-wide w3-center"> Vorstandsvorsitzender</h1>
-    Hansjoerg Schneider <br>
+    Hansjörg Schneider <br>
     eMail :
     <h1 class="w3-wide w3-center"> Registergericht</h1>
-    Amtsgericht Koeln
+    Amtsgericht Köln
     <h1 class="w3-wide w3-center"> Registernummer</h1>
     VR 16234
   </section>
