First release, online version

--- a/site/gymnastik_kursangebot.html
+++ b/site/gymnastik_kursangebot.html
@@ -19,8 +19,8 @@
     </nav>
 	<p></p>
 	<nav class=navBar2>
-      <a href="#"class="w3-button w3-bar-item">Album</a>
-      <a href="#"class="w3-button w3-bar-item">Angebot</a>
+      <a href="gymnastik_album.html"class="w3-button w3-bar-item">Album</a>
+      <a href="gymnastik_kursangebot.html"class="w3-button w3-bar-item">Angebot</a>
     </nav>
 	<section>
 		<h1 class="w3-wide w3-center"> Kursangebot Gymnastik </h1>
