--- a/site/home.html
+++ b/site/home.html
@@ -12,11 +12,11 @@
     </a>
     <nav class=navBar>
       <a href="home.html"class="w3-button w3-bar-item">Home</a>
-	  <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
-	  <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
+      <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
+      <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
   <section>
     <h1 class="w3-wide w3-center"> Vorstellung Verein</h1>
