--- a/site/impressum.html
+++ b/site/impressum.html
@@ -16,8 +16,9 @@
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
+    <p></p>
     <nav class=navBar2>
         <a href="impressum.html"class="w3-button w3-bar-item">Impressum</a>
         <a href="datenschutz.html"class="w3-button w3-bar-item">Datenschutz</a>
