--- a/site/kontakt.html
+++ b/site/kontakt.html
@@ -16,9 +16,24 @@
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-    Allgemeine Information zu dem Verein.
+    <h1 class="w3-wide w3-center"> Adresse</h1>
+    <p>
+      TuS Köln Merkenich 2009 eV <br>
+      Jungbluthstraße 19 <br>
+      50769 Köln <br>
+    </p>
+    <h1 class="w3-wide w3-center"> Dokumente</h1>
+    <p>
+      <a href="../doc/Aufnahmeantrag_tus.pdf" download>
+        Antrag auf Mitgliedschaft
+      </a><br>
+      <a href="../doc/Satzung_tus_merkenich.pdf" download>
+        Satzung TuS Köln Merkenich
+      </a>
+    </p>
+    
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
