--- a/site/wandern.html
+++ b/site/wandern.html
@@ -16,38 +16,47 @@
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
+    <p></p>
     <nav class=navBar2>
-      <a href="#"class="w3-button w3-bar-item">Album</a>
-      <a href="#"class="w3-button w3-bar-item">Termine</a>
+      <a href="wandern_album.html"class="w3-button w3-bar-item">Album</a>
+      <a href="wandern_termine.html"class="w3-button w3-bar-item">Termine</a>
       <a href="#"class="w3-button w3-bar-item">Kontakt</a>
     </nav>
-	<p>
-    Die Sparte Wandern besteht nun schon fast seit 25 Jahren. Hervorgegangen ist sie aus einer
-    Gruppe Wanderfreunden um Ludwig Auhuber und Jutta Meyer, die sich anfangs ganz privat
-    zusammen trafen um Wanderungen in der näheren und weiteren Umgebung Kölns zu unternehmen.
-    <br>
-    Die meisten der Wanderer waren bei der Wacker-Chemie beschäftigt und auch Mitglieder des 
-    ursprünglich als Werksportverein tätigen Wacker-Köln-Merkenich. So war bald die Idee
-    geboren innerhalb dieses Vereins eine eigene Wandersparte zu gründen. Heute verfügt die 
-    Sparte Wandern -die sich inzwischen unter dem Dach des TuS Köln-Merkenich befindet- über
-    einen Mitgliderstamm von etwa 30 Personen. Zu den monatlichen Wanderungen treffen sich in 
-    der Regel 20 - 25 Aktive. Die Wanderziele werden größtenteils mit öffentlichen Verkehrmitteln
-    erreicht. Treffpunkt ist meist die Endhaltestelle der Linie 12 der KVB in Merkenich.
-    <br>
-    Die Mitglieder der Sparte befinden sich mittlerweile überwiegend im Seniorenalter. Die 
-    Auswahl der Wanderstrecke trägt diesem Umstand Rechnung. So werden beispielsweise die
-    aktuell geplanten Touren in weitgehend ebenem Gelände stattfinden. Die Streckenlängen
-    variieren zwischen 8 und 11 km.
-    <br>
-    Die Teilnahme an den Wanderungen ist nicht auf den Mitgliederstamm des TuS Köln-Merkenich
-    beschränkt. Gegen eine Teilnahmegebühr, welche auch die Fahrtkosten beinhaltet können auch
-    Gäste mitwandern.
-    <br>
-    Im August eines jeden Jahres treffen sich die Wanderer zu einem Grillabend und im Dezember
-    findet nach jährlicher Spartenversammlung eine Advents- bzw. Weihnachtsfeier statt.
-  </p>
+    <section>
+        Die Sparte Wandern besteht nun schon fast seit 25 Jahren.
+        Hervorgegangen ist sie aus einer
+        Gruppe Wanderfreunden um Ludwig Auhuber und Jutta Meyer, die sich anfangs ganz privat
+        zusammen trafen um Wanderungen in der näheren und
+        weiteren Umgebung Kölns zu unternehmen.
+        <br>
+        Die meisten der Wanderer waren bei der
+        Wacker-Chemie beschäftigt und auch Mitglieder des 
+        ursprünglich als Werksportverein tätigen Wacker-Köln-Merkenich. So war bald die Idee
+        geboren innerhalb dieses Vereins eine eigene Wandersparte zu gründen. Heute verfügt die 
+        Sparte Wandern -die sich inzwischen unter dem Dach des TuS Köln-Merkenich befindet- über
+        einen Mitgliderstamm von etwa 30 Personen.
+        Zu den monatlichen Wanderungen treffen sich in 
+        der Regel 20 - 25 Aktive.
+        Die Wanderziele werden größtenteils mit öffentlichen Verkehrmitteln
+        erreicht. Treffpunkt ist meist die Endhaltestelle der Linie 12 der KVB in Merkenich.
+        <br>
+        Die Mitglieder der Sparte befinden sich mittlerweile überwiegend im Seniorenalter. Die 
+        Auswahl der Wanderstrecke trägt diesem Umstand Rechnung. So werden beispielsweise die
+        aktuell geplanten Touren in weitgehend ebenem Gelände stattfinden. Die Streckenlängen
+        variieren zwischen 8 und 11 km.
+        <br>
+        Die Teilnahme an den Wanderungen ist nicht auf
+        den Mitgliederstamm des TuS Köln-Merkenich
+        beschränkt. Gegen eine Teilnahmegebühr,
+        welche auch die Fahrtkosten beinhaltet können auch
+        Gäste mitwandern.
+        <br>
+        Im August eines jeden Jahres treffen sich die
+        Wanderer zu einem Grillabend und im Dezember
+        findet nach jährlicher Spartenversammlung eine Advents- bzw. Weihnachtsfeier statt.
+    </section>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
