--- a/site/gymnastik.html
+++ b/site/gymnastik.html
@@ -16,10 +16,11 @@
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
+  <p></p>
 	<nav class=navBar2>
-      <a href="#"class="w3-button w3-bar-item">Album</a>
+      <a href="gymnastik_album.html"class="w3-button w3-bar-item">Album</a>
       <a href="gymnastik_kursangebot.html"class="w3-button w3-bar-item">Angebot</a>
   </nav>
   <section>
