--- a/site/rechtliches.html
+++ b/site/rechtliches.html
@@ -16,7 +16,7 @@
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
     <nav class=navBar2>
         <a href="impressum.html"class="w3-button w3-bar-item">Impressum</a>
