--- a/site/segeln.html
+++ b/site/segeln.html
@@ -16,7 +16,7 @@
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="rechtliches.html"class="w3-button w3-bar-item">Rechtliches</a>
+      <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
 	<p></p>
 	<nav class=navBar2>
@@ -25,7 +25,7 @@
 			<i class="fa fa-caret-down"></i>
 		</button>
 		<div class="dropdown-content">
-			<a href="#">Album</a>
+			<a href="delfin_album.html">Album</a>
 			<a href="#">Kontakt</a>
 		</div>
 	  </div>
@@ -34,7 +34,7 @@
 			<i class="fa fa-caret-down"></i>
 		</button>
 		<div class="dropdown-content">
-			<a href="#">Album</a>
+			<a href="ilmatar_album.html">Album</a>
 			<a href="#">Kontakt</a>
 		</div>
 	  </div>
